Adding status conditions for Suggestion CRD
