# pkg/controller.v1alpha3/suggestion/suggestion_controller.go
@@ -22,6 +22,7 @@ import (
 	appsv1 "k8s.io/api/apps/v1"
 	corev1 "k8s.io/api/core/v1"
 	"k8s.io/apimachinery/pkg/api/errors"
+	metav1 "k8s.io/apimachinery/pkg/apis/meta/v1"
 	"k8s.io/apimachinery/pkg/runtime"
 	"k8s.io/apimachinery/pkg/types"
 	"sigs.k8s.io/controller-runtime/pkg/client"
@@ -117,8 +118,8 @@ type ReconcileSuggestion struct {
 func (r *ReconcileSuggestion) Reconcile(request reconcile.Request) (reconcile.Result, error) {
 	logger := log.WithValues("Suggestion", request.NamespacedName)
 	// Fetch the Suggestion instance
-	instance := &suggestionsv1alpha3.Suggestion{}
-	err := r.Get(context.TODO(), request.NamespacedName, instance)
+	oldS := &suggestionsv1alpha3.Suggestion{}
+	err := r.Get(context.TODO(), request.NamespacedName, oldS)
 	if err != nil {
 		if errors.IsNotFound(err) {
 			// For additional cleanup logic use finalizers.
@@ -127,26 +128,54 @@ func (r *ReconcileSuggestion) Reconcile(request reconcile.Request) (reconcile.Re
 		// Error reading the object - requeue the request.
 		return reconcile.Result{}, err
 	}
-	oldS := instance.DeepCopy()
+	instance := oldS.DeepCopy()
+	if instance.IsCompleted() {
+		return reconcile.Result{}, nil
+	}
+	if !instance.IsCreated() {
+		if instance.Status.StartTime == nil {
+			now := metav1.Now()
+			instance.Status.StartTime = &now
+		}
+		msg := "Suggestion is created"
+		instance.MarkSuggestionStatusCreated(SuggestionCreatedReason, msg)
+	} else {
+		err := r.ReconcileSuggestion(instance)
+		if err != nil {
+			logger.Error(err, "Reconcile Suggestion error")
+			return reconcile.Result{}, err
+		}
+	}
 
-	deploy, err := r.DesiredDeployment(instance)
-	if err != nil {
+	if err := r.updateStatus(instance, oldS); err != nil {
 		return reconcile.Result{}, err
 	}
-	_, err = r.reconcileDeployment(deploy)
-	if err != nil {
-		return reconcile.Result{}, err
-	}
+	return reconcile.Result{}, nil
+}
 
+func (r *ReconcileSuggestion) ReconcileSuggestion(instance *suggestionsv1alpha3.Suggestion) error {
+	logger := log.WithValues("Suggestion", types.NamespacedName{Name: instance.GetName(), Namespace: instance.GetNamespace()})
 	service, err := r.DesiredService(instance)
 	if err != nil {
-		return reconcile.Result{}, err
+		return err
 	}
 	_, err = r.reconcileService(service)
 	if err != nil {
-		return reconcile.Result{}, err
+		return err
 	}
 
+	deploy, err := r.DesiredDeployment(instance)
+	if err != nil {
+		return err
+	}
+	if foundDeploy, err := r.reconcileDeployment(deploy); err != nil {
+		return err
+	} else {
+		if isReady := r.checkDeploymentReady(foundDeploy); isReady != true {
+			// deployment is not ready yet
+			return nil
+		}
+	}
 	experiment := &experimentsv1alpha3.Experiment{}
 	trials := &trialsv1alpha3.TrialList{}
 
@@ -154,22 +183,41 @@ func (r *ReconcileSuggestion) Reconcile(request reconcile.Request) (reconcile.Re
 		Name:      instance.Name,
 		Namespace: instance.Namespace,
 	}, experiment); err != nil {
-		return reconcile.Result{}, err
+		return err
 	}
 
 	if err := r.List(context.TODO(),
 		client.MatchingLabels(util.TrialLabels(experiment)), trials); err != nil {
-		return reconcile.Result{}, err
+		return err
 	}
-
+	if !instance.IsRunning() {
+		if err = r.ValidateAlgorithmSettings(instance, experiment); err != nil {
+			logger.Error(err, "Marking suggestion failed as algorithm settings validation failed")
+			msg := "Suggestion has failed because Algorithm settings validation failed"
+			instance.MarkSuggestionStatusFailed(SuggestionFailedReason, msg)
+			// return nil since it is a terminal condition
+			return nil
+		}
+		msg := "Suggestion is running"
+		instance.MarkSuggestionStatusRunning(SuggestionRunningReason, msg)
+	}
 	logger.Info("Sync assignments", "suggestions", instance.Spec.Requests)
 	if err = r.SyncAssignments(instance, experiment, trials.Items); err != nil {
-		return reconcile.Result{}, err
+		return err
 	}
 
-	// TODO(gaocegege): Check deployment status and update suggestion's status.
-	if err := r.updateStatus(instance, oldS); err != nil {
-		return reconcile.Result{}, err
+	return nil
+}
+
+func (r *ReconcileSuggestion) checkDeploymentReady(deploy *appsv1.Deployment) bool {
+	if deploy == nil {
+		return false
+	} else {
+		for _, cond := range deploy.Status.Conditions {
+			if cond.Type == appsv1.DeploymentAvailable && cond.Status == corev1.ConditionTrue {
+				return true
+			}
+		}
 	}
-	return reconcile.Result{}, nil
+	return false
 }
